Adição de um item no menu e remoção do icon.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="./assets/be3.png" type="image/x-icon">
     <title>Bem Estar Academia</title>
 </head>
 <body>
@@ -15,6 +14,7 @@
             <li>Contato</li>
             <li>Localização</li>
             <li>Sobre</li>
+            <li>Aulas</li>
         </ul>
     </header>
     <div id="img-promocao">
