--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./assets/be3.png" type="image/x-icon">
     <title>Bem Estar Academia</title>
 </head>
 <body>
     <header>
-        <img src="./assets/be2.png" id="logo-be" width="50px" alt="">
+        <img src="./assets/be2.png" id="logo-be" width="50px" alt="Logo BE">
         <ul id="menu">
             <li>Planos</li>
+            <li>Aulas</li>
             <li>Contato</li>
             <li>Localização</li>
             <li>Sobre</li>
-            <li>Aulas</li>
         </ul>
     </header>
     <div id="img-promocao">
